[package]
name = "memmapped-file-rs"
version = "0.1.0"
edition = "2021"
description = "Cross-platform Rust API for memory mapped file IO"
repository = "https://github.com/rocketmq-rust/memmapped-file-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"



[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32", "Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System", "Win32_System_Threading","Storage"] }



